--- a/metier tisser orange.html
+++ b/metier tisser orange.html
@@ -53,7 +53,18 @@
 	<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
 		<use xlink:href='#cadre'/>
 		<use xlink:href='#fils'/>
-		<use xlink:href='#fils' transform='scale(-1,1)' x='-300'/>
+		<path id='fils-bis' d='m 156,240
+			l -156,-145 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+			l -120,-105 a 5,5 -20 0,1 9,-5 l 120,105 a 5,5 -20 0,0 9,-5
+		'/>
 	</svg>
 	<p>Prendre de la laine double. Coincer deux brins sur un angle du métier à l'aide de ruban adhésif.</p>
 	<p>Tendre les fils entre les deux premières dents, contourner la deuxième en tirant sur le fils.</p>
