--- a/dynaplay-test.html
+++ b/dynaplay-test.html
@@ -18,14 +18,15 @@
 	<p>affichage basique: <span>(( objetSimple )), </span></p>
 	<p>affichage par clef: Bonjour je suis (( objetSimple.prenom )), j'ai (( objetSimple.age )) ans. mes couleurs préférées sont <span> (( objetSimple.couleurs )),</span>.</p>
 	<p>liste imbriquée: <span><strong><i>(( listeImbriquee )), </i>- </strong>| </span></p>
+	<p>affichage optionnel: <span if='nombre === 22.9'>cas A</span><span if='nombre === 229'>cas B</span></p>
 	<h2>affichages interractifs</h2>
-	<select name='choix' callback="choisirOption">
+	<select name='choix' callback='choisirOption'>
 		<option value='(( listeSimple ))'>(( listeSimple ))</option>
 	</select>
+	<input name='listeSimple' value='choix'/>
 	<input type='text' name='choix'/>
 	<p>option choisie: (( choix ))</p>
 	<textarea name='phrase'></textarea>
-	<input type='r' name='listeSimple'/>
 </body>
 <script type='text/javascript'>
 	var phrase = 'une phrase simple';
