--- a/dynaplay-test va.html
+++ b/dynaplay-test va.html
@@ -6,7 +6,8 @@
 	<link rel='icon' type='image/svg+xml' href='data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
-	<script type='text/javascript' src='library-js/dynaplay.js'></script>
+	<script type='text/javascript' src='library-js/text.js'></script>
+	<script type='text/javascript' src='library-js/dynaPlay.js'></script>
 	<style type='text/css'></style>
 </head><body>
 	<h1>test du framework dynaplay</h1>
@@ -15,10 +16,10 @@
 	<p>afficher un nombre: (( nombre ))</p>
 	<p>afficher une liste simple: <span>(( listeSimple )), </span></p>
 	<p>afficher une liste d'objets: <span for='listeObjets'>bonjour (( prenom )) (( nom )), </span></p>
-	<p>affichage par clef: Bonjour je suis (( objetSimple.prenom )), j'ai (( objetSimple.age )) ans. mes couleurs préférées sont <span> (( objetSimple.couleurs )),</span>.</p>
 	<p>affichage basique: <span>(( objetSimple )), </span></p>
+	<p>affichage par clef: Bonjour je suis (( objetSimple.prenom )), j'ai (( objetSimple.age )) ans. mes couleurs préférées sont <span> (( objetSimple.couleurs )),</span>.</p>
 	<p>liste imbriquée: <span><strong><i>(( listeImbriquee )), </i>- </strong>| </span></p>
-	<p>affichage optionnel: <span if='dicoPlay.nombre === 22.9'>cas A</span><span if='dicoPlay.nombre === 229'>cas B</span></p>
+	<p>affichage optionnel: <span if='nombre === 22.9'>cas A</span><span if='nombre === 229'>cas B</span></p>
 	<h2>affichages interractifs</h2>
 	<select name='choix' callback='choisirOption'>
 		<option value='(( listeSimple ))'>(( listeSimple ))</option>
@@ -29,21 +30,19 @@
 	<textarea name='phrase'></textarea>
 </body>
 <script type='text/javascript'>
-	dicoPlay ={
-		phrase: 'une phrase simple',
-		nombre: 22.9,
-		listeSimple: [ 'a', 'b', 'c' ],
-		listeObjets: [
-			{ prenom: 'david', nom: 'caroussi' },
-			{ prenom: 'gilbert', nom: 'joseph' },
-			{ prenom: 'edna', nom: 'magnedone' },
-		],
-		listeImbriquee: [
-			[[ 'a', 'b', 'c', 'd' ], [ 'e', 'f', 'g', 'h' ]], [[ 'i', 'j', 'k', 'l' ], [ 'm', 'n', 'o', 'p' ]], [[ 'q', 'r', 's', 't' ], [ 'u', 'v', 'w', 'x' ]]
-		],
-		objetSimple: { nom: 'Caroussi', prenom: 'David', age: 27, couleurs: [ 'bleu', 'orange', 'vert' ]},
-		choix: 'd'
-	};
+	var phrase = 'une phrase simple';
+	var nombre = 22.9;
+	var listeSimple =[ 'a', 'b', 'c' ];
+	var listeObjets =[
+		{ prenom: 'david', nom: 'caroussi' },
+		{ prenom: 'gilbert', nom: 'joseph' },
+		{ prenom: 'edna', nom: 'magnedone' },
+	];
+	var listeImbriquee =[
+		[[ 'a', 'b', 'c', 'd' ], [ 'e', 'f', 'g', 'h' ]], [[ 'i', 'j', 'k', 'l' ], [ 'm', 'n', 'o', 'p' ]], [[ 'q', 'r', 's', 't' ], [ 'u', 'v', 'w', 'x' ]]
+	];
+	var objetSimple ={ nom: 'Caroussi', prenom: 'David', age: 27, couleurs: [ 'bleu', 'orange', 'vert' ]};
+	var choix = 'd';
 	function choisirOption (option){ choix = option; }
 	dpInit();
 </script>
