--- a/cube/cube dd.html
+++ b/cube/cube dd.html
@@ -45,12 +45,22 @@
 	to { transform: rotateX(-360deg); }
 }
 </style></head><body>
-	<p id='r3'>r(3) = </p>
+<h2>les racines</h2>
+<p>r(2) = $r2; r2 /2 = $r22; 1/ r2 = $r2i</p>
+<p>r(3) = $r3; r3 /2 = $r32; 1/ r3 = $r3i</p>
+<h2>triangle rectangle d'hypoténuse a et de coté b</h2>
+<p>b2 = 2* b2 => a= b* 2r = b* $r2 => b= a / 2r = a * $r2i</p>
+<h2>triangle isocèle de coté a et de hauteur b</h2>
+<p>a2 = a2 /4 + b2 => b2 = a2 * 3/4 => b= a* 3r /2 = a* $r32</p>
 	<cube-dd vertical dev='oui'></cube-dd>
 	<rect-dd depth='3em'></rect-dd>
 </body><script type='text/javascript'>
+	const r2 = Math.sqrt (2);
 	const r3 = Math.sqrt (3);
-	const r32 = r3 /2;
-	const p3 = document.getElementById ('r3');
-	p3.innerHTML = 'r(3) = '+ r3 +' --> '+ r32;
+	document.body.innerHTML = document.body.innerHTML.replace ('$r22', r2 /2);
+	document.body.innerHTML = document.body.innerHTML.replaceAll ('$r2i', 1/ r2);
+	document.body.innerHTML = document.body.innerHTML.replaceAll ('$r2', r2);
+	document.body.innerHTML = document.body.innerHTML.replaceAll ('$r32', r3 /2);
+	document.body.innerHTML = document.body.innerHTML.replace ('$r3i', 1/ r3);
+	document.body.innerHTML = document.body.innerHTML.replace ('$r3', r3);
 </script></html>
