--- a/conges.html
+++ b/conges.html
@@ -3,9 +3,9 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<base target='blank' href='../site-dp/'/>
-	<link rel='icon' type='image/svg+xml' href='data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
+	<link rel='icon' type='image/svg+xml' href='../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css' media='screen'/>
 <style type='text/css'>
 	div.temporalite {
 		max-width: 20em;
