--- a/bouton.html
+++ b/bouton.html
@@ -6,13 +6,14 @@
 	<link rel='icon' type='image/svg+xml' href='../site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/cube.css'/>
-	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/cylindre.css'/>
+	<script type='text/javascript' src='../site-dp/library-js/text.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/file.js'></script>
 <style type='text/css'>
+	script#myfile { display: block; }
 </style></head><body>
 	<button onclick='testClic()'>cliquez</button>
 	<p>bonjour</p>
-</body><script type='text/javascript'>
+</body><script type='text/javascript' id='myfile'>
 	const couleurs =[ 'blue', 'green', 'red', 'orange', 'pink' ];
 	const parag = document.getElementsByTagName ('p')[0];
 	const button = document.getElementsByTagName ('button')[0];
@@ -24,4 +25,7 @@
 		if (id === couleurs.length) id =0;
 		parag.style.backgroundColor = couleurs[id];
 	}
+	function callback (res){ console.log (res); }
+	var text = fromFileBackend ('b/journal.txt', 'read', 'text');
+	console.log (text);
 </script></html>
