--- a/cube.html
+++ b/cube.html
@@ -93,6 +93,7 @@ piece >*:nth-child(2){
 	width: var(--width);
 	height: var(--depth);
 	background-image: url("C:\\Users\\LENOVO\\Desktop\\images divers\\effet d'optique - papier peint 70 (2).bmp");
+	background-color: deepskyblue;
 	transform: rotateX(90deg) translateZ(var());
 }
 </style></head><body>
