--- a/cube.html
+++ b/cube.html
@@ -6,15 +6,16 @@
 	<link rel='icon' type='image/svg+xml' href='../site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css' media='screen'/>
-	<script type='text/javascript' src='cube.js'></script>
 <style type='text/css'>
 	body {
-		perspective: 800px;
+		background-color: wheat;
+		perspective: 1000px;
 		perspective-origin: 50% 150px;
 /*		perspective-origin: 15% 150px; */
 		padding-left: 3cm;
 		--bord: solid 1px blue;
 		--fond: #0FF;
+		text-align: center;
 	}
 	iframe {
 		width: 100%;
@@ -22,8 +23,8 @@
 		color: blue;
 	}
 @keyframes spin-horizontal {
-	from { transform: rotateY(0); }
-	to { transform: rotateY(360deg); }
+	from { transform: rotateY(-45deg); }
+	to { transform: rotateY(45deg); }
 }
 @keyframes spin-vertical {
 	from { transform: rotateX(0); }
@@ -34,11 +35,11 @@
 	to { transform: rotateZ(-360deg); }
 }
 piece {
-	--width: 8cm;
-	--height: 10cm;
-	--depth: 6cm;
-	--frise: 24px;
+	--width: 12cm;
+	--height: 12cm;
+	--depth: 7cm;
 	--depth-half: calc(var(--depth) /2);
+	--plainte: solid 8px blue;
 	width: var(--width);
 	height: var(--height);
 	box-sizing: border-box;
@@ -47,11 +48,13 @@ piece {
 	padding: 0;
 	text-align: center;
 	background-position: center;
+	margin-left: 6cm;
 	margin-bottom: 4em;
 	border-style: none;
 	animation: spin-horizontal 5s infinite linear;
+	animation-direction: alternate;
 }
-piece >*, piece >*:nth-child(1):before, piece >*:nth-child(1):after {
+piece >*, piece >*:nth-child(1):before, piece >*:nth-child(1):after, piece >*:nth-child(2):before, piece >*:nth-child(2):after {
 	box-sizing: border-box;
 	background: var(--fond);
 	width: inherit;
@@ -69,13 +72,13 @@ piece >*, piece >*:nth-child(1):before, piece >*:nth-child(1):after {
 }
 /* fond, gauche, droite, sol, plafond */
 piece >*:nth-child(1){
-	width: var(--width);
-	transform: translateZ(var(--depth-half));
+	width: inherit;
+	transform: translateZ(calc(-1* var(--depth-half)));
 	transform-style: preserve-3d;
 	border-left: none;
 	border-right: none;
-	border-bottom: solid 8px red;
-	border-top: solid var(--frise) blue;
+	border-top: none;
+	border-bottom: var(--plainte);
 }
 piece >*:nth-child(1):before, piece >*:nth-child(1):after {
 	content: "";
@@ -84,17 +87,36 @@ piece >*:nth-child(1):before, piece >*:nth-child(1):after {
 	border-bottom: inherit;
 	border-top: inherit;
 	background: inherit;
-	top: calc(-1 * var(--frise));
 	width: var(--depth);
 }
-piece >*:nth-child(1):before { transform: rotateY(90deg) translateZ(calc(var(--width) - var(--depth-half))) translateX(50%); }
-piece >*:nth-child(1):after { transform: rotateY(90deg) translateZ(calc(-1 * var(--depth-half))) translateX(50%); }
-piece >*:nth-child(2){
+piece >*:nth-child(2):after {
+	content: "";
+	transform: rotateX(-90deg) translateY(-50%) translateZ(calc(var(--depth) - var(--height) /2));
 	width: var(--width);
+	height: var(--height);
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	border-bottom: var(--plainte);
+	background-color: #F084;
+/* calc(var(--height) /2 - var(--depth)) */
+}
+piece >*:nth-child(1):before { transform: rotateY(90deg) translateZ(calc(var(--width) - var(--depth-half))) translateX(-50%); }
+piece >*:nth-child(1):after { transform: rotateY(90deg) translateZ(calc(-1 * var(--depth-half))) translateX(-50%); }
+piece >*:nth-child(2){
+	transform-style: preserve-3d;
+	width: inherit;
 	height: var(--depth);
 	background-image: url("C:\\Users\\LENOVO\\Desktop\\images divers\\effet d'optique - papier peint 70 (2).bmp");
 	background-color: deepskyblue;
-	transform: rotateX(90deg) translateZ(var());
+	transform: rotateX(90deg) translateZ(calc(var(--depth-half) - var(--height)));
+}
+piece >*:nth-child(2):before {
+	content: "";
+	background-color: white;
+	width: inherit;
+	height: inherit;
+	transform: translateZ(var(--height));
 }
 </style></head><body>
 	<piece>
